# study2

./: CMakeLists.txt  README.md  main.cpp
ch1/: BookData.cpp
ch2/: d02_method_1.cpp  d02_method_2.cpp  d03_method_3.cpp  d04_method_4.cpp  d05_method_5.cpp
ch3/: MyTeacher.cpp  MyTeacher.h  d06_classmain.cpp  d07_mainclass.cpp
ch4/: d08_main.cpp
