cmake_minimum_required(VERSION 3.15)
project(study2)

set(CMAKE_CXX_STANDARD 14)

#add_executable(study2 main.cpp ch1/Sales_item.h ch1/BookData.cpp )
#add_executable(study2 ch2/d02_method_1.cpp )
#add_executable(study2 ch2/d02_method_2.cpp  )
#add_executable(study2 ch2/d03_method_3.cpp)
#add_executable(study2 ch2/d04_method_4.cpp)
#add_executable(study2 ch2/d05_method_5.cpp)
#add_executable(study2 ch3/MyTeacher.cpp ch3/MyTeacher.h ch3/d06_classmain.cpp ch3/d07_mainclass.cpp)
add_executable(study2 ch3/d07_mainclass.cpp)